--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="container">
+    <header class="container-fluid">
         <div class="row">
             <div class="title col">
                 Placeholder
             </div>
-            <nav class="col">
-                <a>Home</a>
-                <a>Menu</a>
-                <a>Contact Us</a>
+            <nav class="col navbar">
+                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link" href="./menu.html">Menu</a>
+                <a class="nav-link" href="./contact.html">Contact Us</a>
             </nav>
         </div>
     </header>
