Finished most formatting for header

--- a/index.html
+++ b/index.html
@@ -7,28 +7,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <header class="container-fluid">
-        <div class="row">
-            <div class="title col">
-                Placeholder
-            </div>
-            <nav class="col navbar">
-                <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="./menu.html">Menu</a>
-                <a class="nav-link" href="./contact.html">Contact Us</a>
-            </nav>
+<body class="container-fluid">
+    <header class="row">
+        <div class="title col-3">
+            Placeholder
         </div>
+        <nav class="col navbar d-flex justify-content-around">
+            <div>
+                <a class="nav-link active" href="#">Home</a>
+            </div>
+            <div>
+                <a class="nav-link" href="./menu.html">Menu</a>
+            </div>
+            <div>
+                <a class="nav-link" href="./contact.html">Contact Us</a>
+            </div>
+        </nav>
     </header>
-    <body>
-        <div>
+    <div class="row content">
+        <div class="col">
             Carousel
         </div>
-        <main>
+        <main class="col">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolor sequi maiores modi, dicta unde animi! Dolor porro alias maiores! Eos beatae voluptatum at doloremque ipsam quidem deleniti architecto animi!
         </main>
-    </body>
-    <footer>
+    </div>
+    <footer class="row">
         Copyright
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
