--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
     </header>
     <div class="row content">
         <div class="col">
-            Carousel
+            <div id="carouselHome" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img src="/images/pepperoni.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                <img src="/images/breadsticks.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                <img src="/images/brownies.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselHome" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+            </div>
         </div>
         <main class="col">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolor sequi maiores modi, dicta unde animi! Dolor porro alias maiores! Eos beatae voluptatum at doloremque ipsam quidem deleniti architecto animi!
