Minor format changes and added framework for menu and contact pages

--- a/index.html
+++ b/index.html
@@ -7,53 +7,64 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="container-fluid">
-    <header class="row">
-        <div class="title col-3">
-            Placeholder
+<body class="d-flex flex-column">
+    <header class="containment-fluid">
+        <div class="row">
+            <div class="title col-3">
+                Placeholder
+            </div>
+            <nav class="col navbar d-flex justify-content-around">
+                <div>
+                    <a class="nav-link active" href="#">Home</a>
+                </div>
+                <div>
+                    <a class="nav-link" href="./menu.html">Menu</a>
+                </div>
+                <div>
+                    <a class="nav-link" href="./contact.html">Contact Us</a>
+                </div>
+            </nav>
         </div>
-        <nav class="col navbar d-flex justify-content-around">
-            <div>
-                <a class="nav-link active" href="#">Home</a>
-            </div>
-            <div>
-                <a class="nav-link" href="./menu.html">Menu</a>
-            </div>
-            <div>
-                <a class="nav-link" href="./contact.html">Contact Us</a>
-            </div>
-        </nav>
     </header>
-    <div class="row content">
-        <div class="col">
-            <div id="carouselHome" class="carousel slide" data-bs-ride="true">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img src="/images/pepperoni.jpg" class="d-block w-100" alt="...">
+    <div class="containment-fluid content">
+        <div class="row">
+            <div class="col">
+                <div id="carouselHome" class="carousel slide" data-bs-ride="true">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                    <img src="/images/pepperoni.jpg" class="d-block w-100" alt="Pepperoni Pizza">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="/images/breadsticks.jpg" class="d-block w-100" alt="Breadsticks">
+                    </div>
+                    <div class="carousel-item">
+                    <img src="/images/brownies.jpg" class="d-block w-100" alt="Brownies">
+                    </div>
                 </div>
-                <div class="carousel-item">
-                <img src="/images/breadsticks.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                <img src="/images/brownies.jpg" class="d-block w-100" alt="...">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselHome" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselHome" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-            </div>
+            <main class="col">
+                <h2 class="mainHeader">
+                    Placeholder
+                </h2>
+                <content>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis vel vero pariatur quos, et esse inventore ipsum sint harum cumque fuga, asperiores saepe possimus eveniet! Eligendi id pariatur fugiat asperiores.
+                </content>
+            </main>
         </div>
-        <main class="col">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae dolor sequi maiores modi, dicta unde animi! Dolor porro alias maiores! Eos beatae voluptatum at doloremque ipsam quidem deleniti architecto animi!
-        </main>
     </div>
-    <footer class="row">
-        Copyright
+    <footer class="containment-fluid">
+        <div class="row">
+            Copyright
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
