--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <header class="containment-fluid">
         <div class="row">
             <div class="title col-3">
-                Placeholder
+                Velocity Pizza
             </div>
             <nav class="col navbar d-flex justify-content-around">
                 <div>
@@ -31,7 +31,7 @@
     </div>
     <footer class="containment-fluid">
         <div class="row">
-            Copyright
+            Copyright&copy; 2026 Velocity Pizza
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
