menu image formatting

--- a/menu.html
+++ b/menu.html
@@ -27,27 +27,27 @@
         </div>
     </header>
     <div class="containment-fluid content">
-        <div class="row">
+        <div class="row menu-section">
             <div class="col menu-img">
                 <img src="./images/pepperoni.jpg"/>
             </div>
-            <div class="col menu-txt">
+            <div class="col-8 menu-txt">
                 Placeholder
             </div>
         </div>
-        <div class="row">
+        <div class="row menu-section">
             <div class="col menu-img">
                 <img src="./images/breadsticks.jpg"/>
             </div>
-            <div class="col menu-txt">
+            <div class="col-8 menu-txt">
                 Placeholder
             </div>
         </div>
-        <div class="row">
+        <div class="row menu-section">
             <div class="col menu-img">
                 <img src="./images/brownies.jpg"/>
             </div>
-            <div class="col menu-txt">
+            <div class="col-8 menu-txt">
                 Placeholder
             </div>
         </div>
