Finished menu page

--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,15 @@
                 <img src="./images/pepperoni.jpg"/>
             </div>
             <div class="col-8 menu-txt">
-                Placeholder
+                <h2>
+                    Pepperoni Pizza
+                </h2>
+                <p>
+                    Our classic pepperoni pizza
+                </p>
+                <p>
+                    $14.99
+                </p>
             </div>
         </div>
         <div class="row menu-section">
@@ -40,7 +48,15 @@
                 <img src="./images/breadsticks.jpg"/>
             </div>
             <div class="col-8 menu-txt">
-                Placeholder
+                <h2>
+                    Breadsticks
+                </h2>
+                <p>
+                    Our world-famous breadsticks
+                </p>
+                <p>
+                    $6.99
+                </p>
             </div>
         </div>
         <div class="row menu-section">
@@ -48,7 +64,15 @@
                 <img src="./images/brownies.jpg"/>
             </div>
             <div class="col-8 menu-txt">
-                Placeholder
+                <h2>
+                    Brownies
+                </h2>
+                <p>
+                    Our delicious brownies, delivered warm guaranteed!
+                </p>
+                <p>
+                    $6.99
+                </p>
             </div>
         </div>
     </div>
