Filled in homepage placeholders

--- a/index.html
+++ b/index.html
@@ -53,10 +53,17 @@
             </div>
             <main class="col">
                 <h2 class="mainHeader">
-                    Placeholder
+                    Quality Pizza, in a Flash!
                 </h2>
                 <content>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis vel vero pariatur quos, et esse inventore ipsum sint harum cumque fuga, asperiores saepe possimus eveniet! Eligendi id pariatur fugiat asperiores.
+                    <p>
+                    For 30 years, Velocity Pizza has been Central City's go-to spot for quality pizza. 
+                    No matter what toppings or size, whether you dine-in or get delivery, we have always delivered top-notch pizza at top-notch speeds.
+                    Try our world-famous breadsticks today!
+                    </p>
+                    <p>
+                    Visit at 1234 West Blvd, Central City or call 123-456-7890 to place your order!
+                    </p>
                 </content>
             </main>
         </div>
