--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,23 @@
         </div>
     </header>
     <div class="containment-fluid content">
-        
+        <form action="#" method="get" class="contact-form">
+            <div>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required /> 
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" />
+            </div>
+            <div>
+                <label for="reason">Reason for Contact</label>
+                <input type="text" id="reason" name="reason" required />
+            </div>
+            <div>
+                <button type="submit">Submit</button>
+            </div>
+        </form>
     </div>
     <footer class="containment-fluid">
         <div class="row">
